# nics-aroma

./: .gitignore  README.md  aroma_constants.py  aroma_gui.py  aroma_parser.py  aroma_pinbo.py  aroma_ringarea.py  aroma_su.py  pyproject.toml
Sample/benzene/: benz-center1.armdat  benz-center1.in  benz-sigma-center1.armdat  benz-sigma-center1.in  benz-sigma-guessonly.in  benz-sigma.in  benz.arm  benz.armlog
Sample/indene/: indene-center1.armdat  indene-center1.in  indene-center2.armdat  indene-center2.in  indene-sigma-center1.armdat  indene-sigma-center1.in  indene-sigma-center2.armdat  indene-sigma-center2.in  indene-sigma-guessonly.in  indene-sigma.in  indene.arm  indene.armlog
Sample/phenalene/: phenalene-x-allcenter.armdat  phenalene-x-alldiff.armdat  phenalene-x-center1.in  phenalene-x-sigma-allcenter.armdat  phenalene-x-sigma-center1.in  phenalene-x.arm  phenalene-x.armlog  phenalene-y-allcenter.armdat  phenalene-y-alldiff.armdat  phenalene-y-center1.in  phenalene-y-sigma-allcenter.armdat  phenalene-y-sigma-center1.in  phenalene-y-sigma-guessonly.in  phenalene-y-sigma.in  phenalene-y.arm  phenalene-y.armlog  phenalene-z-center1.armdat  phenalene-z-center1.in  phenalene-z-sigma-center1.armdat  phenalene-z-sigma-center1.in  phenalene-z.arm  phenalene-z.armlog  phenalene.suarm
Sample/pyrrole/: pyrrole-center1.armdat  pyrrole-center1.in  pyrrole-center1.picmo  pyrrole.arm
examples/: nics_scan.ipynb
legacy/: aroma.py  aroma_analysis.py  aroma_molecule.py  aroma_picmo.py  aroma_util.py
src/aroma/: __init__.py  analysis.py  batch.py  cli.py  connectivity.py  constants.py  elements.py  geometry.py  (+7 more)
tests/: conftest.py  test_analysis.py  test_batch.py  test_geometry.py  test_io.py  test_nics.py  test_nics_integration.py  test_parallel.py  test_precomputed.py  test_rings.py  test_sigma_only.py
(+11 files in other folders)
